# rustamps

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  PLANS.md  README.md  environment.yml  howtorun.md  parity.md  pyproject.toml  report.md  setup.py  summary_final_report.md
configs/: native-kernels.yaml  stage6-balanced.yaml  stage6-experimental-15x.yaml  stage6-experimental-20x.yaml  stage6-fast.yaml
crates/pystamps-io/: Cargo.toml
crates/pystamps-io/src/: dataset.rs  raw.rs  transaction.rs
crates/pystamps-io/src/mat/: mod.rs  order.rs  v5.rs  v73.rs
crates/pystamps-io/src/snap/: discover.rs  tests.rs
crates/pystamps-io/tests/: mat_roundtrip.rs  real_dataset.rs  snap_prep.rs
crates/pystamps-pipeline/: Cargo.toml
crates/pystamps-pipeline/src/: config.rs  config_native.rs  config_tolerance.rs  invalidation.rs  runner.rs  status.rs
crates/pystamps-pipeline/src/native/: mat.rs  mod.rs  params.rs  stage8.rs  topology.rs
crates/pystamps-pipeline/src/native/stage1/: legacy_guard.rs  metadata.rs  mod.rs  output.rs  raw.rs
crates/pystamps-pipeline/src/native/stage2/: input.rs  mod.rs  options.rs  output.rs  reference.rs  snr_tests.rs  tests.rs
crates/pystamps-pipeline/src/native/stage3/: input.rs  mod.rs  output.rs  reestimate.rs  tests.rs  threshold.rs
crates/pystamps-pipeline/src/native/stage4/: input.rs  mod.rs  output.rs  tests.rs
crates/pystamps-pipeline/src/native/stage5/: merge.rs  merged_write.rs  patch.rs  tests.rs  write.rs
crates/pystamps-pipeline/src/native/stage6/: cache_meta.rs  costs.rs  filter.rs  grid.rs  grid_checkpoint.rs  input.rs  interp.rs  mod.rs  output.rs  resume_tests.rs  schedule.rs  solve.rs  solve_checkpoint.rs  space_time.rs  tests.rs  timing.rs  wrapped.rs
crates/pystamps-pipeline/src/native/stage7/: input.rs  mod.rs  output.rs  tests.rs
crates/pystamps-pipeline/src/runner/: runner_tests.rs
crates/pystamps-verify/: Cargo.toml
crates/pystamps-verify/src/: artifacts.rs  compare.rs  policy.rs  profile_tests.rs  report.rs  value_compare.rs  value_compare_tests.rs  value_numeric.rs  value_result.rs  value_support.rs
crates/pystamps-verify/tests/: verify_paths.rs
crates/rustamps-core/: Cargo.toml
crates/rustamps-core/src/prep/: mod.rs  patches.rs  prepare.rs  types.rs
crates/rustamps-core/src/stage6/: geometry.rs  la.rs  mod.rs  phase.rs  tests.rs
crates/rustamps-core/src/stage6/unwrap/: mod.rs  native.rs  stage6_compact_dsu.rs  stage6_cut.rs  stage6_cut_graph.rs  stage6_cut_tests.rs  stage6_cut_windows.rs  stage6_incr_cost.rs  stage6_local_cycles.rs  stage6_mst_flow.rs  stage6_native_decode.rs  stage6_native_edges.rs  stage6_native_labels.rs  stage6_residue.rs  stage6_tree_adjacency.rs  stage6_tree_basis.rs  stage6_tree_basis_tests.rs  stage6_tree_large.rs
crates/rustamps-core/src/stage7/: phase.rs  qr.rs  scla.rs
crates/rustamps-core/src/stage8/: mod.rs  spatial.rs  temporal.rs  tests.rs
crates/rustamps-core/src/stages/stage1/: chronology.rs  geometry.rs  mod.rs  run.rs  types.rs
crates/rustamps-core/src/stages/stage2/: kernels.rs  native.rs  types.rs  weighting.rs
crates/rustamps-core/src/stages/stage3/: reestimate.rs  select.rs  types.rs
crates/rustamps-core/src/stages/stage4/: fit.rs  noise.rs  noise_affine.rs  noise_tests.rs  weed.rs
crates/rustamps-core/src/stages/stage5/: merge.rs  promote.rs  types.rs
crates/rustamps-pipeline/: Cargo.toml
crates/rustamps-pipeline/src/: config_native.rs  invalidation.rs  lib.rs  report.rs  runner.rs  status.rs
crates/rustamps-pipeline/src/native/: mat.rs  params.rs  stage8.rs
crates/rustamps-pipeline/src/native/stage1/: legacy_guard.rs  metadata.rs  mod.rs  output.rs  raw.rs
crates/rustamps-pipeline/src/native/stage2/: input.rs  mod.rs  options.rs  output.rs  reference.rs  snr_tests.rs  tests.rs
crates/rustamps-pipeline/src/native/stage3/: input.rs  mod.rs  output.rs  reestimate.rs  tests.rs  threshold.rs
crates/rustamps-pipeline/src/native/stage4/: input.rs  mod.rs  output.rs  tests.rs
crates/rustamps-pipeline/src/native/stage5/: merge.rs  merged_write.rs  mod.rs  patch.rs  tests.rs  write.rs
crates/rustamps-pipeline/src/native/stage6/: cache_meta.rs  filter.rs  fingerprint.rs  grid.rs  grid_checkpoint.rs  input.rs  interp.rs  nearest.rs  output.rs  resume_tests.rs  solve.rs  solve_checkpoint.rs  space_time.rs  tests.rs  timing.rs  wrapped.rs
crates/rustamps-pipeline/src/native/stage7/: input.rs  mod.rs  output.rs  reference.rs  tests.rs
crates/rustamps-pipeline/src/runner/: runner_tests.rs
crates/rustamps-verify/: Cargo.toml
crates/rustamps-verify/src/: artifacts.rs  compare.rs  lib.rs  policy.rs  profile_tests.rs  value_compare.rs  value_compare_tests.rs  value_numeric.rs  value_support.rs
crates/rustamps-verify/tests/: verify_paths.rs
docs/: architecture.html  architecture.md  configuration.html  contributing.html  faq.html  function-reference.html  function_reference.md  getting-started.html  getting_started.md  index.html  inputs.html  installation.html  native_runtime.md  pipeline-science-guide.html  pipeline_science_guide.md  quickstart.html  release.md  scientific_audit.md  testing.html  usage.html  verification.html
examples/: 00_pystamps_beginner_walkthrough.ipynb  01_pystamps_dataset_inspection.ipynb  02_pystamps_stage_execution.ipynb  03_pystamps_verification.ipynb  pystamps_beginner_walkthrough.ipynb  pystamps_dataset_inspection.ipynb  pystamps_stage_execution.ipynb  pystamps_verification.ipynb
notebooks/: 00_pystamps_beginner_walkthrough.ipynb  01_pystamps_dataset_inspection.ipynb  02_pystamps_stage_execution.ipynb  02_pystamps_stage_execution.replay.yaml  02_pystamps_stage_execution.validation.yaml  03_pystamps_verification.audit.yaml  03_pystamps_verification.ipynb  04_rust_end2end_parity_validation.ipynb  backend_rust_explanation.ipynb  start_here.ipynb  start_here_rust.ipynb  utils.py
oracle/: pyproject.toml
pystamps/: __init__.py  _version.py  cli.py  config.py  input_contracts.py  parity_contract.py  status.py  verify.py
recipe/: recipe.yaml  (+1 more)
(+337 files in other folders)
