[package]
name = "rustamps"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Standalone Rust implementation of the StaMPS persistent-scatterer workflow"
homepage = "https://github.com/sirbastiano/rustamps"
repository = "https://github.com/sirbastiano/rustamps"
publish = false
autolib = false
autobins = false

[workspace]
resolver = "2"
members = [
    ".",
    "crates/rustamps-core",
    "crates/rustamps-io",
    "crates/rustamps-pipeline",
    "crates/rustamps-verify",
]
default-members = ["."]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
delaunator = "=1.1.0"
faer = "=0.24.4"
hdf5-pure = { version = "=0.21.1", features = ["parallel", "serde"] }
matrw = "=0.1.4"
num-complex = { version = "0.4", features = ["serde"] }
rayon = "1.10"
rustfft = "6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"

[[bin]]
name = "rustamps"
path = "crates/rustamps-cli/src/main.rs"

[dependencies]
clap.workspace = true
rustamps-core = { path = "crates/rustamps-core" }
rustamps-io = { path = "crates/rustamps-io" }
rustamps-pipeline = { path = "crates/rustamps-pipeline" }
rustamps-verify = { path = "crates/rustamps-verify" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
