[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystamps"
dynamic = ["version"]
description = "Python-first, threaded StaMPS migration toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "pySTAMPS contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
keywords = ["insar", "stamps", "geodesy", "remote-sensing"]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "h5py>=3.11",
  "mat73>=0.65",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.1",
]

[project.scripts]
pystamps = "pystamps.cli:main"

[tool.setuptools.packages.find]
include = ["pystamps*"]

[tool.setuptools_scm]
write_to = "pystamps/_version.py"
fallback_version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
