[project]
name = "pystamps-oracle-dev"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "h5py>=3.11",
  "huggingface-hub>=0.28",
  "mat73>=0.65",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "pytest>=9.0.3",
  "pytest-cov>=5.0",
  "PyYAML>=6.0",
  "ruff>=0.6",
  "scipy>=1.11",
  "shapely>=2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-q"
markers = [
  "dataset_parity: tests that require local parity datasets under inputs_and_outputs/",
]
