[package]
name = "pystamps-io"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hdf5-pure.workspace = true
matrw.workspace = true
num-complex.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
