[package]
name = "pystamps-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
num-complex.workspace = true
pystamps-io = { path = "../pystamps-io" }
pystamps-pipeline = { path = "../pystamps-pipeline" }
serde.workspace = true
thiserror.workspace = true
