[package]
name = "rustamps-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
delaunator.workspace = true
faer.workspace = true
num-complex.workspace = true
rayon.workspace = true
rustfft.workspace = true
serde.workspace = true
thiserror.workspace = true
