[package]
name = "rustamps-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
delaunator.workspace = true
num-complex.workspace = true
rustamps-core = { path = "../rustamps-core" }
rustamps-io = { path = "../rustamps-io" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
