[package]
name = "rustamps-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
num-complex.workspace = true
rustamps-io = { path = "../rustamps-io" }
rustamps-pipeline = { path = "../rustamps-pipeline" }
serde.workspace = true
thiserror.workspace = true
